# artefacts_api

./: .env  .env.example  .gitignore  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml  requiremnts.txt
artefacts/: admin.py  asgi.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
artefacts/base/: base_response_class.py  base_view.py
artefacts/migrations/: 0001_initial.py  0002_archeologist_artefact_archeologist.py
artefacts_api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
artefacts_api/base/: base_view.py  response_mixin.py
artefacts_api/migrations/: 0001_initial.py  0002_alter_artefact_archeologist.py  0002_article.py  0003_artefact_creation_century_artefact_discovery_year.py  0003_historyage_artefact_history_age.py  0004_alter_historyage_options.py  0004_remove_artefact_creation_century_and_more.py  0005_article_archeologists.py  0005_rename_name_archeologist_first_name.py  0006_article_history_ages.py
auth_api/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
auth_api/migrations/: 0001_initial.py
base/: __init__.py  base_model.py  base_view.py  custom_middleware.py  response_mixin.py
celery_app/: celery.py  tasks.py
core/: asgi.py  settings.py  urls.py  wsgi.py
