[tool.poetry]
name = "artefacts-api"
version = "0.1.0"
description = ""
authors = ["Maksim Litvinenka <letuwwa@gmail.com>"]
readme = "README.md"
packages = [{include = "artefacts_api"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
django-rest-framework = "^0.1.0"
djangorestframework-simplejwt = "^5.2.2"
celery = "^5.2.7"
faker = "^16.4.0"
black = "^22.12.0"
django-cors-headers = "^3.13.0"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.0"
drf-yasg = "^1.21.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
