[project]
name = "artefacts-api"
version = "0.1.0"
description = "Django REST API for managing artefacts and archeologists."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Maksim Litvinenka", email = "letuwwa@gmail.com" },
]
dependencies = [
    "celery>=5.5.0,<6.0",
    "django>=5.2,<6.0",
    "django-cors-headers>=4.7.0,<5.0",
    "djangorestframework>=3.16.0,<4.0",
    "djangorestframework-simplejwt>=5.5.0,<6.0",
    "drf-yasg>=1.21.10,<2.0",
    "faker>=37.0.0,<38.0",
    "psycopg2-binary>=2.9.10,<3.0",
    "python-dotenv>=1.1.0,<2.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0,<26.0",
]

[tool.uv]
package = false
